@@ -1,5 +1,6 @@
 Changelog for GoodNews
 
+- exclude blocked MODX users from recipients collection
 - fixed a problem in Subscription controller when &usernameField property is set
 - [#43] complete rewrite of automatic full URL conversion (now respects #anchor links external links and protocol-relative URLs)
 - fixed errors in package uninstall process
